--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask
-flask_sqlalchemy
-flask_bcrypt
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+gunicorn
 requests
 textblob
-gunicorn
+psycopg2-binary
